# bigdata-monodb-Project

./: .gitattributes  .gitignore  ErrLog  Makefile  README.md  env.template  mypy.ini  pyproject.toml  pytest.ini  quickstart.md
dashboard/: app.py
docker/: docker-compose.yml  init-sharding.sh  setup-cluster.sh
docs/: SETUP.md  architecture_diagram.mermaid
scripts/: generate_data.py  run_pipeline.py  setup_database.py
src/: __init__.py  aggregation.py  cleaning.py  config.py  ingestion.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_cleaning.py  test_ingestion.py
